Fixed: Thank you note and Footer alignment

--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -21,11 +21,13 @@ body {
 #section4 {
     background-color: rgba(255, 255, 255, 0.353); /* Light background with slight transparency */
     backdrop-filter: blur(5px);
-    padding: 20px 30px 10px; /* Adjust padding, more space at the top and sides */
+    padding: 20px 30px 20px; /* Adjust padding, more space at the top and sides */
     border-radius: 15px; /* Curved corners */
     display: inline-block; /* Ensure the rectangle wraps tightly around the text */
     text-align: center; /* Center-align text */
-    margin: 40px auto 20px; /* Center the section horizontally, add space above, 20px space below */
+    min-height: 30vh;
+    max-width: 90vh;
+    margin: 40px auto 0px; /* Center the section horizontally, add space above, 20px space below */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 1px 1px rgba(255, 255, 255, 0.3); /* Metallic look with slight shadow */
 }
 
@@ -79,6 +81,8 @@ body {
     padding: 40px 20px;
     text-align: center;
     display: none; /* Initially hide the footer */
+    margin-top: 90px;
+    border-radius: 20px;
 }
 
 #contact-footer .footer-content {
@@ -96,6 +100,8 @@ body {
 #contact-footer h3 {
     margin-bottom: 15px;
     color: #000; /* Black color for headings */
+    font-weight: bold;
+    font-size: 28px;
 }
 
 #contact-footer p {
